<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faedcd"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView

            android:id="@+id/MiPuntuacion"
            android:text="@string/MiPuntuacion"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp">

        </TextView>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Score"
            android:text="@string/Score"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:gravity="center">

        </TextView>

        <androidx.appcompat.widget.AppCompatImageView

            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/Imagen"
            android:src="@drawable/cuisine">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView

            android:id="@+id/IdU"
            android:text="@string/User"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp">

        </TextView>

        <TextView

            android:id="@+id/User"
            android:text="@string/User"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp">

        </TextView>

        <TextView

            android:id="@+id/Mail"
            android:text="@string/Mail"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:id="@+id/JugarBtn"
            android:text="@string/JugarBtn"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:background="@drawable/boton_personalizado">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:id="@+id/PuntuacionBtn"
            android:text="@string/PuntuacionBtn"
            android:textSize="20sp"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:id="@+id/AcercadeBtn"
            android:text="@string/AcercadeBtn"
            android:textSize="20sp"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:textSize="20sp"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>