<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#faedcd"
    android:padding="10dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/ImagenGameOver"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/gameover">

    </ImageView>

    <TextView

        android:id="@+id/TextoEliminacion"
        android:text="@string/TextoEliminacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:gravity="center">

    </TextView>

    <TextView

        android:id="@+id/Total"
        android:text="@string/Total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:gravity="center">

    </TextView>


    <TextView

        android:id="@+id/TextoEliminacionUno"
        android:text="@string/TextoEliminacionUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:gravity="center">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="match_parent"
        android:id="@+id/JugarDeNuevo"
        android:text="@string/JugarDeNuevo"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:background="@drawable/boton_personalizado">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="match_parent"
        android:id="@+id/IrMenu"
        android:text="@string/IrMenu"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:background="@drawable/boton_personalizado">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.appcompat.widget.LinearLayoutCompat>