<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faedcd"
    tools:context=".Registro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:hint="@string/Correo"
                android:textColor="#000000"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress">

            </EditText>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/Password"
                android:textColor="#000000"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textPassword">

            </EditText>

            <EditText
                android:id="@+id/Usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/Usuario"
                android:textColor="#000000"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="text">

            </EditText>


            <TextView
                android:id="@+id/Fecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/Fecha"
                android:textSize="20sp">

            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:background="@drawable/boton_personalizado"
                android:textSize="20sp"
                android:text="@string/Registro">

            </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

</RelativeLayout>