<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#faedcd"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    app:cardUseCompatPadding="true"
    android:elevation="2dp">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView

            android:id="@+id/ImagenJugador"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cebolla">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:id="@+id/NombreJugador"
                android:text="@string/NombreJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView

                android:id="@+id/CorreoJugador"
                android:text="@string/CorreoJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView

                android:id="@+id/Puntuacion"
                android:text="@string/Puntuacion"
                android:textSize="20sp"
                android:textColor="#F62516"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>